# fishc-fish-cpp-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.py
.cache/clangd/index/: argument.cpp.5340A744CF75AA5F.idx  argument.h.0CB5AFE4ADFED612.idx  argument_parser.cpp.4D638E10A691D2ED.idx  argument_parser.h.CC2C2FE768675C0A.idx  argument_validator.cpp.D349B798E6C6640A.idx  argument_validator.h.86C652E9621806B5.idx  code_box.cpp.5BA80F63D155110B.idx  code_box.h.B1C7DD623A1D07BB.idx  file_loader.cpp.B201C214CCFA3672.idx  file_loader.h.A515641EB2E137DF.idx  help_printer.cpp.FCFC8A50B12CE2C2.idx  help_printer.h.0FFEB749522AE4FE.idx  interpreter.cpp.9CE31F8BB22309FA.idx  interpreter.h.8125CF8F57385223.idx  main.cpp.F7280EDC5EDA627C.idx  option.cpp.F4A8D99729B02D39.idx  option.h.5AF17AC13FE38263.idx  sample_test.cpp.94E8678A1B574676.idx  test_main.cpp.9BC6994C18959C9A.idx  type.cpp.838AC1D049FDCFD1.idx  type.h.2139CEEE72EA84C6.idx  utils.h.047B461B500D1593.idx  version.cpp.682FE3F5D75D18DD.idx  version.h.A098975F052A3CF6.idx
.github/workflows/: on_push_test.yaml  push_test.yaml
bash/: build.sh
docs/: language_specification_jp.md
include/: argument.h  argument_help_printer.h  argument_initializer.h  argument_parser.h  argument_parser_initializer.h  argument_validator.h  code_box.h  exception.h  file_loader.h  fish_resource.h  help_printer.h  instruction_handler.h  interperter.h  interpreter.h  option.h  option_loader.h  type.h  utils.h  version.h
src/: CMakeLists.txt  argument.cpp  argument_help_printer.cpp  argument_initializer.cpp  argument_parser.cpp  argument_parser_initializer.cpp  argument_validator.cpp  code_box.cpp  file_loader.cpp  help_printer.cpp  instruction_handler.cpp  interperter.cpp  interpreter.cpp  main.cpp  option.cpp  option_loader.cpp  type.cpp  version.cpp
test/: CMakeLists.txt  argument_parser_test.cpp  argument_test.cpp  argument_validator_test.cpp  code_box_test.cpp  instruction_handler_test.cpp  instruction_test_direction.cpp  instruction_test_mirror.cpp  sample_test.cpp  test_main.cpp  type_test.cpp
test/fish_code/: brain_fxxk_interpreter.fish  cat.fish  get_input_number.fish  hello_world.fish  hello_world1.fish  hello_world2.fish  hello_world3.fish  test_left_shift.fish  test_rot_3.fish
test/fish_code/result/: cat_in.txt  get_input_number_in.txt  get_input_number_out.txt
